# VectorBooleanCPP

./: .clang-format  .gitignore  CMakeLists.txt  License.txt  README.md
VectorBooleanTestbed/: .gitignore
VectorBooleanTestbed/VectorBooleanTestbed/: App-Bridging-Header.h  AppDelegate.swift  Utils.swift  ViewController.swift  WindowController.swift
VectorBooleanTestbed/VectorBooleanTestbed.xcodeproj/: project.pbxproj
VectorBooleanTestbed/VectorBooleanTestbed/Base.lproj/: Main.storyboard
VectorBooleanTestbed/VectorBooleanTestbedTests/: VectorBooleanTestbedTests.swift
VectorBooleanTestbed/VectorBooleanTestbedUITests/: VectorBooleanTestbedUITests.swift  VectorBooleanTestbedUITestsLaunchTests.swift
examples/: main.cpp
src/vectorboolean/: FBBezierContour.cpp  FBBezierContour.hpp  FBBezierCurve.cpp  FBBezierCurve.hpp  FBBezierGraph.cpp  FBBezierGraph.hpp  FBBezierIntersectRange.cpp  FBBezierIntersectRange.hpp  FBBezierIntersection.cpp  FBBezierIntersection.hpp  FBBezierPath.cpp  FBBezierPath.hpp  FBCommon.cpp  FBCommon.hpp  FBContourOverlap.cpp  FBContourOverlap.hpp  FBCurveLocation.cpp  FBCurveLocation.hpp  FBEdgeCrossing.cpp  FBEdgeCrossing.hpp  FBGeometry.cpp  FBGeometry.hpp  VectorBoolean.hpp
tests/: CMakeLists.txt  doctest.h  test_arc_shapes.cpp  test_circle_overlapping_rectangle.cpp  test_complexshapes.cpp  test_main.cpp  test_touched_rectangles.cpp  test_two_boxes.cpp  utils.cpp  utils.hpp
